--- a/app/views/bedrooms/show.html.erb
+++ b/app/views/bedrooms/show.html.erb
@@ -1,21 +1,19 @@
-<%- model_class = Bedroom -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
-</div>
+<p id="notice"><%= notice %></p>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:type) %>:</strong></dt>
-  <dd><%= @bedroom.type %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
-  <dd><%= @bedroom.description %></dd>
-</dl>
+<p>
+  <strong>Category:</strong>
+  <%= @bedroom.category %>
+</p>
 
-<%= link_to t('.back', :default => t("helpers.links.back")),
-              bedrooms_path, :class => 'btn btn-default'  %>
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_bedroom_path(@bedroom), :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              bedroom_path(@bedroom),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+<p>
+  <strong>Description:</strong>
+  <%= @bedroom.description %>
+</p>
+
+<p>
+  <strong>Hotel:</strong>
+  <%= @bedroom.hotel %>
+</p>
+
+<%= link_to 'Edit', edit_bedroom_path(@bedroom) %> |
+<%= link_to 'Back', bedrooms_path %>
