--- a/app/views/hotels/index.html.erb
+++ b/app/views/hotels/index.html.erb
@@ -1,44 +1,31 @@
-<%- model_class = Hotel -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-</div>
-<table class="table table-striped">
+<p id="notice"><%= notice %></p>
+
+<h1>Hotels</h1>
+
+<table>
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:adress) %></th>
-      <th><%= model_class.human_attribute_name(:descrition) %></th>
-      <th><%= model_class.human_attribute_name(:rating) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th>Name</th>
+      <th>Location</th>
+      <th>Rank</th>
+      <th colspan="3"></th>
     </tr>
   </thead>
+
   <tbody>
     <% @hotels.each do |hotel| %>
       <tr>
-        <td><%= link_to hotel.id, hotel_path(hotel) %></td>
         <td><%= hotel.name %></td>
-        <td><%= hotel.adress %></td>
-        <td><%= hotel.descrition %></td>
-        <td><%= hotel.rating %></td>
-        <td><%=l hotel.created_at %></td>
-        <td>
-          <%= link_to t('.show', :default => t("helpers.links.show")),
-                      hotel_path(hotel), :class => 'btn btn-default btn-xs' %>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_hotel_path(hotel), :class => 'btn btn-default btn-xs' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      hotel_path(hotel),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-xs btn-danger' %>
-        </td>
+        <td><%= hotel.location %></td>
+        <td><%= hotel.rank %></td>
+        <td><%= link_to 'Show', hotel %></td>
+        <td><%= link_to 'Edit', edit_hotel_path(hotel) %></td>
+        <td><%= link_to 'Destroy', hotel, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_hotel_path,
-            :class => 'btn btn-primary' %>
+<br>
+
+<%= link_to 'New Hotel', new_hotel_path %>
