--- a/app/views/hotels/show.html.erb
+++ b/app/views/hotels/show.html.erb
@@ -1,25 +1,19 @@
-<%- model_class = Hotel -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
-</div>
+<p id="notice"><%= notice %></p>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @hotel.name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:adress) %>:</strong></dt>
-  <dd><%= @hotel.adress %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:descrition) %>:</strong></dt>
-  <dd><%= @hotel.descrition %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:rating) %>:</strong></dt>
-  <dd><%= @hotel.rating %></dd>
-</dl>
+<p>
+  <strong>Name:</strong>
+  <%= @hotel.name %>
+</p>
 
-<%= link_to t('.back', :default => t("helpers.links.back")),
-              hotels_path, :class => 'btn btn-default'  %>
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_hotel_path(@hotel), :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              hotel_path(@hotel),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+<p>
+  <strong>Location:</strong>
+  <%= @hotel.location %>
+</p>
+
+<p>
+  <strong>Rank:</strong>
+  <%= @hotel.rank %>
+</p>
+
+<%= link_to 'Edit', edit_hotel_path(@hotel) %> |
+<%= link_to 'Back', hotels_path %>
