--- a/app/views/bedrooms/edit.html.erb
+++ b/app/views/bedrooms/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Bedroom</h1>
-
-<%= render 'form', bedroom: @bedroom %>
-
-<%= link_to 'Show', @bedroom %> |
-<%= link_to 'Back', bedrooms_path %>
+<%- model_class = Bedroom -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
