--- a/app/views/bedrooms/index.html.erb
+++ b/app/views/bedrooms/index.html.erb
@@ -1,31 +1,50 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Bedrooms</h1>
-
-<table>
+<%- model_class = Bedroom -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Category</th>
-      <th>Description</th>
-      <th>Hotel</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:category) %></th>
+      <th><%= model_class.human_attribute_name(:description) %></th>
+      <th><%= model_class.human_attribute_name(:hotel_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @bedrooms.each do |bedroom| %>
       <tr>
+        <td><%= link_to bedroom.id, bedroom_path(bedroom) %></td>
         <td><%= bedroom.category %></td>
         <td><%= bedroom.description %></td>
-        <td><%= bedroom.hotel %></td>
-        <td><%= link_to 'Show', bedroom %></td>
-        <td><%= link_to 'Edit', edit_bedroom_path(bedroom) %></td>
-        <td><%= link_to 'Destroy', bedroom, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= bedroom.hotel_id %></td>
+        <td><%=l bedroom.created_at %></td>
+        <td>
+          <%= link_to t('.show', :default => t("helpers.links.show")),
+                      bedroom_path(bedroom), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_bedroom_path(bedroom), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      bedroom_path(bedroom),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-xs btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
 
-<%= link_to 'New Bedroom', new_bedroom_path %>
+
+            <% unless user_signed_in? %>
+
+
+        <% else %>
+        <%= link_to t('.new', :default => t("helpers.links.new")),
+                    new_bedroom_path,
+                    :class => 'btn btn-primary' %>
+
+          <% end %>
