--- a/app/views/hotels/_form.html.erb
+++ b/app/views/hotels/_form.html.erb
@@ -1,32 +1,48 @@
-<%= form_with(model: hotel, local: true) do |form| %>
-  <% if hotel.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(hotel.errors.count, "error") %> prohibited this hotel from being saved:</h2>
+<%= form_for @hotel, :html => { :class => "form-horizontal hotel" } do |f| %>
 
-      <ul>
-      <% hotel.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+  <% if @hotel.errors.any? %>
+    <div id="error_expl" class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@hotel.errors.count, "error") %> prohibited this hotel from being saved:</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+        <% @hotel.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+  <div class="form-group">
+    <%= f.label :name, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :name, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:name) %>
+  </div>
+  <div class="form-group">
+    <%= f.label :location, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :location, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:location) %>
+  </div>
+  <div class="form-group">
+    <%= f.label :rank, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%=select("hotel", "rank", %w(1 2 3 4 5), { include_blank: false },{:class => 'form-control'}) %>
+    </div>
+    <%=f.error_span(:rank) %>
   </div>
 
-  <div class="field">
-    <%= form.label :location %>
-    <%= form.text_area :location %>
+  <div class="form-group">
+    <div class="col-lg-offset-2 col-lg-10">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                hotels_path, :class => 'btn btn-default' %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :rank %>
-    <%= form.text_field :rank %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
 <% end %>
