--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,13 +20,40 @@
           <a class="nav-link" <%= link_to 'Quartos', bedrooms_path %></a>
         </li>
 
+
+        <% unless user_signed_in? %>
         <li class="nav-item">
           <a class="nav-link" <%= link_to 'Entrar', users_path %> </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" <%= link_to 'Cadrastra', new_user_session_path %> </a>
+
         </li>
-      </ul>
+
+          <% else %>
+
+
+        <li class="nav-item">
+          <a class="nav-link" <%= link_to 'Sign Out',  destroy_user_session_path, method: :delete %> </a>
+        </li>
+        <% end %>
+
+
+
     </div>
   </div>
 </nav>
+<br>
+<br>
+<br>
+<br>
+
+
+
+
+
+  <% unless user_signed_in? %>
+
+    <% else %>
+
+      <% end %>
