--- a/app/views/bedrooms/_form.html.erb
+++ b/app/views/bedrooms/_form.html.erb
@@ -22,6 +22,7 @@
     </div>
 
     <%=f.error_span(:category) %>
+
   </div>
   <div class="form-group">
     <%= f.label :description, :class => 'control-label col-lg-2' %>
@@ -33,10 +34,10 @@
   <div class="form-group">
     <%= f.label :hotel_id, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
-      <%= f.text_field :hotel_id, :class => 'form-control' %>
-    </div>
-    <%=f.error_span(:hotel_id) %>
+    <%=f.collection_select(:hotel_id, Hotel.all, :id, :name, { include_blank: false },{:class => 'form-control'})%>
   </div>
+  <br>
+</div>
 
   <div class="form-group">
     <div class="col-lg-offset-2 col-lg-10">
