--- a/app/views/bedrooms/show.html.erb
+++ b/app/views/bedrooms/show.html.erb
@@ -9,7 +9,8 @@
   <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
   <dd><%= @bedroom.description %></dd>
   <dt><strong><%= model_class.human_attribute_name(:hotel_id) %>:</strong></dt>
-  <dd><%= @bedroom.hotel_id %></dd>
+  <dd><%= @bedroom.hotel.name %></dd>
+
 </dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
