--- a/app/views/bedrooms/_form.html.erb
+++ b/app/views/bedrooms/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @bedroom, :html => { :class => "form-horizontal bedroom" } do |f| %>
+<%= form_for @bedroom,html: { multipart: true }, :html => { :class => "form-horizontal bedroom" } do |f| %>
 
   <% if @bedroom.errors.any? %>
     <div id="error_expl" class="panel panel-danger">
@@ -14,6 +14,9 @@
       </div>
     </div>
   <% end %>
+
+
+<%= f.file_field :foto %>
 
   <div class="form-group">
     <%= f.label :category, :class => 'control-label col-lg-2' %>
