--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,8 +1,8 @@
-<div class="container gallery-container">
+ <div class="container gallery-container">
 
     <h1>Hoteis Disponiveis</h1>
 
-  
+
 
     <div class="tz-gallery">
 
@@ -74,6 +74,19 @@
                     </div>
                 </div>
             </div>
+            <% @bedrooms.each do |bedroom| %>
+            <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <a class="lightbox" href="#">
+                  <%= image_tag bedroom.foto.url %>
+                </a>
+                <div class="caption">
+                    <h3><%=bedroom.hotel.name %></h3>
+                    <p> <%= bedroom.description %> </p>
+                </div>
+            </div>
+            </div>
+            <% end %>
         </div>
 
     </div>
