--- a/app/views/bedrooms/_form.html.erb
+++ b/app/views/bedrooms/_form.html.erb
@@ -34,6 +34,24 @@
     </div>
     <%=f.error_span(:description) %>
   </div>
+
+  <div class="form-group">
+    <%= f.label :price, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :price, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:price) %>
+  </div>
+
+
+  <div class="form-group">
+    <%= f.label :telephone, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :telephone, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:telephone) %>
+  </div>
+
   <div class="form-group">
     <%= f.label :hotel_id, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
