--- a/app/views/bedrooms/show.html.erb
+++ b/app/views/bedrooms/show.html.erb
@@ -1,9 +1,20 @@
 <%- model_class = Bedroom -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
-</div>
 
 <dl class="dl-horizontal">
+</div>
+<dl class="dl-horizontal">
+<dt><%= image_tag @bedroom.foto.url(:medium),{:class => "img-thumbnail"}%><dt>
+</dl>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
   <dt><strong><%= model_class.human_attribute_name(:category) %>:</strong></dt>
   <dd><%= @bedroom.category %></dd>
   <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
@@ -16,7 +27,7 @@
   <dd><%= @bedroom.telephone %></dd>
 
 </dl>
-<%= image_tag @bedroom.foto.url(:medium) %>
+
 <%= link_to t('.back', :default => t("helpers.links.back")),
               bedrooms_path, :class => 'btn btn-default'  %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
