ajustando campos de telefone e vallidando

--- a/app/views/hotels/show.html.erb
+++ b/app/views/hotels/show.html.erb
@@ -10,7 +10,8 @@
   <dd><%= @hotel.location %></dd>
   <dt><strong><%= model_class.human_attribute_name(:rank) %>:</strong></dt>
   <dd><%= @hotel.rank %></dd>
-  
+  <dt><strong><%= model_class.human_attribute_name(:telephone) %>:</strong></dt>
+  <dd><%= @hotel.telephone %></dd>
 
   <%@hotel.bedrooms.each do |t| %>
 
