--- a/app/views/hotels/_form.html.erb
+++ b/app/views/hotels/_form.html.erb
@@ -34,6 +34,17 @@
     </div>
     <%=f.error_span(:location) %>
   </div>
+
+
+  <div class="form-group">
+    <%= f.label :telephone, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :telephone, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:telephone) %>
+  </div>
+
+
   <div class="form-group">
     <%= f.label :rank, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
