--- a/app/views/bedrooms/_form.html.erb
+++ b/app/views/bedrooms/_form.html.erb
@@ -1,3 +1,21 @@
+<% unless user_signed_in? %>
+
+  <div id="error_expl" class="panel panel-danger">
+    <div class="panel-heading">
+      <h3 class="panel-title">Voçê nao tem acesso a esse conteúdo</h3>
+    </div>
+    <div class="panel-body">
+      <ul>
+
+        <li>Faça o login com sua conta</li>
+
+      </ul>
+    </div>
+  </div>
+
+
+
+  <% else %>
 <%= form_for @bedroom,html: { multipart: true }, :html => { :class => "form-horizontal bedroom" } do |f| %>
 
   <% if @bedroom.errors.any? %>
@@ -62,4 +80,5 @@
     </div>
   </div>
 
+<% end %>
 <% end %>
