--- a/app/views/bedrooms/show.html.erb
+++ b/app/views/bedrooms/show.html.erb
@@ -26,7 +26,9 @@
 
 
 </dl>
+<% unless user_signed_in? %>
 
+  <% else %>
 <%= link_to t('.back', :default => t("helpers.links.back")),
               bedrooms_path, :class => 'btn btn-default'  %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
@@ -36,3 +38,4 @@
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
+<%end%>
