--- a/app/views/hotels/_form.html.erb
+++ b/app/views/hotels/_form.html.erb
@@ -1,3 +1,19 @@
+<% unless user_signed_in? %>
+
+  <div id="error_expl" class="panel panel-danger">
+    <div class="panel-heading">
+      <h3 class="panel-title">Voçê nao tem acesso a esse conteúdo</h3>
+    </div>
+    <div class="panel-body">
+      <ul>
+
+        <li>Faça o login com sua conta</li>
+
+      </ul>
+    </div>
+  </div>
+  <% else %>
+  
 <%= form_for @hotel, :html => { :class => "form-horizontal hotel" } do |f| %>
 
   <% if @hotel.errors.any? %>
@@ -61,4 +77,5 @@
     </div>
   </div>
 
+<% end %>
 <% end %>
