--- a/app/views/hotels/index.html.erb
+++ b/app/views/hotels/index.html.erb
@@ -25,6 +25,12 @@
         <td><%= hotel.rank %></td>
         <td><%=l hotel.created_at %></td>
         <td>
+          <% unless user_signed_in? %>
+            <% else %>
+
+
+
+
           <%= link_to t('.show', :default => t("helpers.links.show")),
                       hotel_path(hotel), :class => 'btn btn-default btn-xs' %>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
@@ -34,6 +40,7 @@
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-xs btn-danger' %>
+            <% end %>
         </td>
       </tr>
     <% end %>
@@ -46,9 +53,7 @@
 
 
 
-            				<% unless user_signed_in? %>
-
-
+            	<% unless user_signed_in? %>
             		<% else %>
                 <%= link_to t('.nao', :default => t("helpers.links.new")),
                             new_hotel_path,
