--- a/app/views/hotels/show.html.erb
+++ b/app/views/hotels/show.html.erb
@@ -21,6 +21,10 @@
 
 </dl>
 
+<% unless user_signed_in? %>
+
+  <% else %>
+
 <%= link_to t('.back', :default => t("helpers.links.back")),
               hotels_path, :class => 'btn btn-default'  %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
@@ -30,3 +34,4 @@
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
+<%end%>
