adicinando paginaçao e atualizando views

--- a/app/views/bedrooms/show.html.erb
+++ b/app/views/bedrooms/show.html.erb
@@ -23,7 +23,8 @@
   <dd><%= @bedroom.hotel.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
   <dd><%= @bedroom.price %></dd>
-
+  <dt><strong><%= model_class.human_attribute_name(:telephone) %>:</strong></dt>
+  <dd><%= @bedroom.hotel.telephone %></dd>
 
 </dl>
 <% unless user_signed_in? %>
