--- a/app/views/hotels/index.html.erb
+++ b/app/views/hotels/index.html.erb
@@ -9,6 +9,7 @@
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:location) %></th>
       <th><%= model_class.human_attribute_name(:rank) %></th>
+      <th><%= model_class.human_attribute_name(:telephone) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -20,9 +21,8 @@
         <td><%= hotel.name %></td>
         <td><%= hotel.location %></td>
 
-        <td><%= %></td>
-
         <td><%= hotel.rank %></td>
+        <td><%= hotel.telephone %></td>
         <td><%=l hotel.created_at %></td>
         <td>
           <% unless user_signed_in? %>
